<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmFragment">

    <!-- Top Banner -->
    <LinearLayout
        android:id="@+id/topBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/light_gray_rounded_corner"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        >

        <!-- Left Image -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/back"
            android:contentDescription="@string/bird_text" />

        <!-- Middle Image -->
        <ImageView
            android:id="@+id/nameImageMainPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/name"
            android:contentDescription="@string/name_text" />

        <!-- Placeholder -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/hamburger"
            android:contentDescription="@string/hamburger_text" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/alarm"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="87dp" />

</androidx.constraintlayout.widget.ConstraintLayout>